--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -41,7 +41,7 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Set working directory
 WORKDIR /var/www
 COPY . /var/www/
-RUN php artisan config:clear
+# RUN php artisan config:clear
 RUN rm -f composer.lock
 RUN composer i
 
