--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -42,6 +42,7 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 WORKDIR /var/www
 COPY . /var/www/
 # RUN php artisan config:clear
+RUN composer dump-autoload
 RUN rm -f composer.lock
 RUN composer i
 
