--- a/Web/.env
+++ b/Web/.env
@@ -1,3 +1,4 @@
 API_HOST = "http://159.223.92.126"
 API_PORT = "8000"
 API_URL = "https://d2k-bookstore-api.chhornkakada.store"
+# API_URL = "http://127.0.0.1:8000"
